test/errors/cpp_generator_error/zs/sql_table_i_parameter_provider_class_clash_error.zs
package sql_table_i_parameter_provider_class_clash_error;

sql_table IParameterProvider
{
    uint32 id sql "PRIMARY KEY NOT NULL";
};
